Bug 114507 - After modifying the digiKam main toolbar, all the tools menu have disappeared.
Summary: After modifying the digiKam main toolbar, all the tools menu have disappeared.
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Usability-Menus (other bugs)
Version First Reported In: 0.8.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-10-16 16:07 UTC by Tung NGUYEN
Modified: 2024-05-29 02:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 8.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tung NGUYEN 2005-10-16 16:07:41 UTC
Version:           0.8.0-beta2 (using KDE KDE 3.4.2)
Installed from:    Compiled From Sources

For exemple: 
 
 - Check all the KIPI plugins in the menu DigiKam->Settings->Configure DigiKam...->Kipi plugins.
 - Now, access to the menu DigiKam->Settings->Configure Toolbars... 
 - Add or remove action. 
 - Click on "OK". 
 
 => All the KIPI menu in the DigiKam main menu have disappeared. I have no message in Konsole.
Comment 1 Joern Ahrens 2005-10-17 00:04:17 UTC
SVN commit 471231 by jahrens:

Thanks for reporting!

BUG: 114507


 M  +11 -17    digikamapp.cpp  
 M  +0 -1      digikamapp.h  


--- trunk/extragear/graphics/digikam/digikam/digikamapp.cpp #471230:471231
@@ -578,7 +578,6 @@
         mSplash->message(i18n("Loading cameras"), AlignLeft, white);
     loadCameras();
 
-    
     createGUI(QString::fromLatin1( "digikamui.rc" ), false);
 
     // Initialize Actions ---------------------------------------
@@ -617,18 +616,6 @@
     }
 }
 
-void DigikamApp::recreateGUI()
-{
-    createGUI("digikamui.rc");
-    applyMainWindowSettings(KGlobal::config());
-    plugActionList( QString::fromLatin1("file_actions_import"), m_kipiFileActionsImport );
-    plugActionList( QString::fromLatin1("image_actions"), m_kipiImageActions );
-    plugActionList( QString::fromLatin1("tool_actions"), m_kipiToolsActions );
-    plugActionList( QString::fromLatin1("batch_actions"), m_kipiBatchActions );
-    plugActionList( QString::fromLatin1("album_actions"), m_kipiAlbumActions );
-    plugActionList( QString::fromLatin1("file_actions_export"), m_kipiFileActionsExport );
-}
-
 void DigikamApp::enableThumbSizePlusAction(bool val)
 {
     mThumbSizePlusAction->setEnabled(val);
@@ -879,7 +866,6 @@
                                    actionCollection(),
                                    ctype->title().utf8());
     mCameraMenuAction->insert(cAction, 0);
-//    recreateGUI();    
     ctype->setAction(cAction);
 }
 
@@ -983,9 +969,17 @@
     saveMainWindowSettings(KGlobal::config());
     KEditToolbar *dlg = new KEditToolbar(actionCollection(), "digikamui.rc");
 
-    if (dlg->exec())
-        recreateGUI();
-
+    if(dlg->exec());
+    {
+        createGUI(QString::fromLatin1( "digikamui.rc" ), false);
+        applyMainWindowSettings(KGlobal::config());
+        plugActionList( QString::fromLatin1("file_actions_import"), m_kipiFileActionsImport );
+        plugActionList( QString::fromLatin1("image_actions"), m_kipiImageActions );
+        plugActionList( QString::fromLatin1("tool_actions"), m_kipiToolsActions );
+        plugActionList( QString::fromLatin1("batch_actions"), m_kipiBatchActions );
+        plugActionList( QString::fromLatin1("album_actions"), m_kipiAlbumActions );
+        plugActionList( QString::fromLatin1("file_actions_export"), m_kipiFileActionsExport );
+    }
     delete dlg;
 }
 
--- trunk/extragear/graphics/digikam/digikam/digikamapp.h #471230:471231
@@ -94,7 +94,6 @@
     void loadCameras();
     void populateThemes();
     void updateDeleteTrashMenu();
-    void recreateGUI();
 
 protected:
 
Comment 2 Tung NGUYEN 2005-10-17 01:09:39 UTC
Joern, thank you for the fix.