Thanks for reporting!

BUG: 114507

svn path=/trunk/extragear/graphics/digikam/; revision=471231