digikam/digikamapp.cpp
@@ -578,7 +578,6 @@ void DigikamApp::setupActions()
         mSplash->message(i18n("Loading cameras"), AlignLeft, white);
     loadCameras();
 
-    
     createGUI(QString::fromLatin1( "digikamui.rc" ), false);
 
     // Initialize Actions ---------------------------------------
@@ -615,18 +614,6 @@ void DigikamApp::setupActions()
         enableThumbSizePlusAction(true);
         enableThumbSizeMinusAction(true);
     }
-}
-
-void DigikamApp::recreateGUI()
-{
-    createGUI("digikamui.rc");
-    applyMainWindowSettings(KGlobal::config());
-    plugActionList( QString::fromLatin1("file_actions_import"), m_kipiFileActionsImport );
-    plugActionList( QString::fromLatin1("image_actions"), m_kipiImageActions );
-    plugActionList( QString::fromLatin1("tool_actions"), m_kipiToolsActions );
-    plugActionList( QString::fromLatin1("batch_actions"), m_kipiBatchActions );
-    plugActionList( QString::fromLatin1("album_actions"), m_kipiAlbumActions );
-    plugActionList( QString::fromLatin1("file_actions_export"), m_kipiFileActionsExport );
 }
 
 void DigikamApp::enableThumbSizePlusAction(bool val)
@@ -879,7 +866,6 @@ void DigikamApp::slotCameraAdded(CameraType *ctype)
                                    actionCollection(),
                                    ctype->title().utf8());
     mCameraMenuAction->insert(cAction, 0);
-//    recreateGUI();    
     ctype->setAction(cAction);
 }
 
@@ -983,9 +969,17 @@ void DigikamApp::slotConfToolbars()
     saveMainWindowSettings(KGlobal::config());
     KEditToolbar *dlg = new KEditToolbar(actionCollection(), "digikamui.rc");
 
-    if (dlg->exec())
-        recreateGUI();
-
+    if(dlg->exec());
+    {
+        createGUI(QString::fromLatin1( "digikamui.rc" ), false);
+        applyMainWindowSettings(KGlobal::config());
+        plugActionList( QString::fromLatin1("file_actions_import"), m_kipiFileActionsImport );
+        plugActionList( QString::fromLatin1("image_actions"), m_kipiImageActions );
+        plugActionList( QString::fromLatin1("tool_actions"), m_kipiToolsActions );
+        plugActionList( QString::fromLatin1("batch_actions"), m_kipiBatchActions );
+        plugActionList( QString::fromLatin1("album_actions"), m_kipiAlbumActions );
+        plugActionList( QString::fromLatin1("file_actions_export"), m_kipiFileActionsExport );
+    }
     delete dlg;
 }
 
