digikam/digikamapp.h
@@ -94,7 +94,6 @@ private:
     void loadCameras();
     void populateThemes();
     void updateDeleteTrashMenu();
-    void recreateGUI();
 
 protected:
 
